[tool.poetry]
name = "milp"
version = "0.1.0"
description = ""
authors = ["Guilherme Prado <guizmk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyomo = "^6.7.3"
gurobipy = "^11.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
